# MyAlgo

./: .clang-format  .gitignore  AutoOpen.ahk  BuildEXE.bat  CMakeLists.txt  CMake_Build.bat  GetVersion.bat  LICENCE.txt  Readme.md  connector-cpp-CMakeLists.txt  cpplint.py  main  my_algo.7z
MyADT/: CMakeLists.txt
MyADT/include/: list.h
MyADT/src/: list.cpp  list_unittest.cpp  main.cpp
MyAlgo/: CMakeLists.txt  main.cpp
MyAlgo/Profiler/: Profiler.cpp  Profiler.h
MyAlgo/include/: Console_Color.h  GLog.h  algorithm_imp.h  binary_search.h  forward.h  g_logger.h  gos_func.h  gos_get_file_size.h  gos_get_localtime.h  gos_itoa.h  gos_typedef.h  list_template.h  profiler.h
MyAlgo/include/gos/: gos_func.h  gos_typedef.h
MyAlgo/src/: GLog.cpp  binary_search.cpp  forward.cpp  g_logger.cpp  gos_get_file_size.cpp  gos_get_localtime.cpp  gos_itoa.cpp  list_template.cpp  list_template_unittest.cpp  memory_block.cpp  profiler.cpp
MyAlgo/src/EasyLogging_Sample/logbuilder/: logbuilder.cpp
MyAlgo/src/gos/: gos_func.cpp
MyAlgo/unittest/: algorithm_unittest.cpp  gos_func_unittest.cpp  gos_get_file_size_unittest.cpp  gos_get_localtime_unittest.cpp  gos_itoa_unittest.cpp  list_unittest.cpp
c_test/: alloc-testing.c  example.c
copy/: winnt.h
doc/: MarkDown Guide.md
doc/Introsort/: Introsort - Wikipedia.html
doc/Introsort/Introsort - Wikipedia_files/: load.php
doc/Sorting algorithm/Sorting algorithm - Wikipedia_files/: load.php
doc/Sorting network/Sorting network - Wikipedia_files/: load(1).php  load.php
doc/TechnicalSummary/: TechnicalSummary.md
doc/TechnicalSummary/src/: Technical Summary.md
doc/gtest/samples/: sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
doc/html/Sorting algorithm/: Sorting algorithm - Wikipedia.html
doc/html/Sorting network/: Sorting network - Wikipedia.html
doc/html/Sorting network/Sorting network - Wikipedia_files/: load(2).php
doc/spdlog/example/: example.cpp
googletest/: CMakeLists.txt
home/event/: CMakeLists.txt
home/event/src/: main.cpp
home/mysql-api/: CMakeLists.txt
home/mysql-api/src/: main.cpp
home/socket/client/: CMakeLists.txt
home/socket/client/src/: main.cpp
home/socket/server/: CMakeLists.txt
home/socket/server/src/: main.cpp
include/: my_algo.hpp
include/Version/: Version.h  VersionConfig.h  gettag.bat
include/catch2/: catch.hpp
include/concurrentqueue/: concurrentqueue.h
include/detail/: allocator.hpp  big_int.hpp  concurrency.hpp  detail.hpp  file.hpp  file_line_reader_utility.hpp  kmp.hpp  lazy.hpp  list_node_serialize.hpp  lru_cache.hpp  math.hpp  random.hpp  skip_list.hpp  time.hpp  tree_node_serialize.hpp  union_find.hpp
include/gtest/internal/: gtest-port.h
include/init/: init.h
include/leetcode/: leetcode.h
include/md5/: md5.h
include/my_algo/: my_algo.hpp
include/my_algo/detail/: allocator.hpp  array_utility.hpp  base64_utility.hpp  big_int.hpp  bimap.hpp  bimap_utility.hpp  color_print.hpp  concurrency.hpp  detail.hpp  erase_if.hpp  example.txt  file.hpp  file_line_reader_utility.hpp  input_check_utility.hpp  kmp.hpp  lazy.hpp  lru_cache.hpp  math.hpp  optional.hpp  quick_sort.hpp  random.hpp  skip_list.hpp  string_stream.hpp  string_utility.hpp  thread_annotations.hpp  threadsafe_queue.hpp  threadsafe_stack.hpp  time.hpp  union_find.hpp  uuid_utility.hpp  visit.hpp
include/my_algo/detail/serialize_and_deserialize/: list_node_serialize.hpp  tree_node_serialize.hpp  two_dimensional_vector_serialize.hpp
include/public/: MacroDefine.h
include/spdlog_learn/: rotating_file_sink.h  thread_pool.h
include/tools/data_struct/: avl_tree_sample.h  binary_tree.h  binary_tree_sample.h  calculate.h  double_key.h  dynamic_programming_sample.h  print_data_struct.h  smart_ptr.h  stack_practice.h  union_find_sample.h
include/tools/designpattern/: Singleton.h
include/tools/log/: log.h  spdlog.cpp
include/tools/log/spdlog/: spdlog-inl.h  spdlog.h
include/tools/profiler/: Profiler.h
include/tools/simpleini/: SimpleIni.h
include/tools/utility/: utility.h
include/tools/utility/detail/: algorithm_utility.h  allocator_utility.h  async_log_utility.h  concurrency_utility.h  dbg.h  detail_utility.h  file_line_reader_utility.h  functional_programming_utility.h  invoke_utility.h  lrucache.hpp  marco_utility.h  my_log_utility.h  object_counter_utility.h  output_container_utility.h  prime_utility.h  random_utility.h  system_utility.h  template_utility.h  thread_guard_utility.h  thread_pool_utility.h  (+2 more)
introsort/: introsort.h  main.cpp
lib/benchmark/Debug/: benchmark_main.lib
lib/benchmark/Release/: benchmark.lib  benchmark_main.lib
src/: main.cc  main.cpp
src/gtest/: gtest-death-test.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest.cc
src/init/: init.cpp
src/leetcode/: leetcode.cpp
src/md5/: md5.cpp
src/tools/data_struct/: binary_tree.cpp  print_data_struct.cpp
sudoku/: sudoku.cpp
thread_pool/: thread_pool.hpp  thread_pool_example.cpp
thrid_party/catch/catch/: catch.hpp
tools/: AutoOpen.ahk  AutoOpen_Home.ahk  AutoOpen_Work.ahk
unittest/: big_int_unittest.cc  example_unittest.cc  example_unittest.txt  is_multi_overflow_unittest.cc  multi_s_unittest.cc  optional_unittest.cc  quick_sort_unittest.cc  skip_list_uinttest.cc  threadsafe_queue_unittest.cc  threadsafe_stack_unittest.cc  two_dimensional_vector_serialize_unittest.cc
unittest/concurrentqueue/: concurrentqueue_unittest.cpp
unittest/leetcode/: leetcode_unittest.cpp
unittest/tools/: time_utility_unittest.cpp  utility_unittest.cpp
unittest/tools/data_struct/: binary_tree_sample_unittest.cpp  binary_tree_unittest.cpp  calculate_unittest.cpp  print_data_struct_unittest.cpp  stack_practice_unittest.cpp
unittest/tools/designpattern/: Singleton_unittest.cpp
unittest/tools/log/: log_unittest.cpp
unittest/tools/profiler/: profiler_unittest.cpp
unittest/tools/utility/: concurrency_utility.cpp  concurrency_utility_unittest.cpp  file_line_reader_utility_unittest.cpp  object_counter_utility_unittest.cpp  time_utility_unittest.cpp  utility_unittest.cpp
(+4 files in other folders)
